--- a/Igada/style.css
+++ b/Igada/style.css
@@ -15,3 +15,10 @@ main > p {
  div.RAM > picture > img {
     width: 250px;
 }
+
+footer{
+    text-align: center;
+    color: white;
+    background-color: black;
+    
+}
